<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bottom_round4"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Dialog_get_tips"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/label_Dialog_get_tips_welcome"
        android:textColor="@color/colorBlack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/label_Dialog_get_tips2"
        android:textColor="@color/colorBlack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/label_Dialog_get_tips3"
        android:textColor="@color/colorBlack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/label_Dialog_get_tips4"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/dialog_confirm_confirm"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textview_round"
            android:gravity="center"
            android:text="@string/label_Dialog_get_tips_confirm"
            android:textColor="@color/color99White"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_confirm_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/dialog_confirm_confirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/label_Dialog_get_tips_cancel"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>