<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_add_sheet_guideline_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_add_sheet_guideline_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".75" />

        <ImageView
            android:id="@+id/dialog_add_sheet_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/label_default_local"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_add_sheet_cancel"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/label_Dialog_cancel"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_add_sheet_confirm"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/label_Dialog_confirm"
            android:textColor="@color/colorGrey"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_add_sheet_tips_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_Dialog_Music_sheet"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/dialog_add_sheet_guideline_left"
            app:layout_constraintTop_toBottomOf="@id/dialog_add_sheet_cancel" />

        <TextView
            android:id="@+id/dialog_add_sheet_tips_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Dialog_video_sheet"
            android:textColor="@color/colorGrey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/dialog_add_sheet_guideline_right"
            app:layout_constraintTop_toBottomOf="@id/dialog_add_sheet_confirm"
            app:layout_constraintTop_toTopOf="@id/dialog_add_sheet_tips_song" />

        <EditText
            android:id="@+id/dialog_add_sheet_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:alpha="0.7"
            android:autofillHints=""
            android:background="@color/color30White"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/label_Dialog_input_new_sheet_name"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/my_cursor_drawable"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/dialog_add_sheet_tips_song" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_add_sheet_et"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="10dp"
            android:text="@string/label_Dialog_new_sheet_tips"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
