<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="0dp"
    android:paddingEnd="15dp">
    <EditText
        android:id="@+id/fragment_edit_et"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/label_Dialog_input_new_sheet_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textCursorDrawable="@drawable/my_cursor_drawable"
        android:gravity="center_vertical"
        android:background="@color/color01Black"
        android:focusable="true"
        android:autofillHints=" "
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8"/>
    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/fragment_edit_iv_empty"
        android:src="@drawable/iv_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_edit_et"
        app:layout_constraintBottom_toBottomOf="@id/fragment_edit_et"
        app:layout_constraintStart_toEndOf="@id/fragment_edit_et"
        app:layout_constraintHorizontal_bias=".8"
        android:contentDescription="@string/label_MineFragment_sheet_empty"
        android:padding="9dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:src="@color/color99White"
        app:layout_constraintTop_toBottomOf="@id/fragment_edit_et"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:contentDescription="@string/label_Dialog_line"/>

</androidx.constraintlayout.widget.ConstraintLayout>